--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ pytest==7.2.0		# Testing
 coverage==6.5.0		# Coverage
 plantuml==0.3.0		# UML display module
 six==1.16.0 		# Utilities for python 2 and 3 compatibility
+easygui				# Interface for prompts
